--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-  "name": "X-URL-Uploader",
+  "name": "URL-Uploader",
   "description": "Telegram Bot to Upload URLs to Telegram as File and Video.",
   "keywords": [
     "telegram",
